Initial dist subtree commit

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,10 @@
 # compiled output
 /tmp
 /out-tsc
-# Only exists if Bazel was run
-/bazel-out
 
 # dependencies
 /node_modules
-
-# profiling files
-chrome-profiler-events*.json
+/bower_components
 
 # IDEs and editors
 /.idea
@@ -27,19 +23,25 @@ chrome-profiler-events*.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
 
 # misc
-/.angular/cache
 /.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
 npm-debug.log
-yarn-error.log
 testem.log
 /typings
+.tmp
+*.tmp
 
 # System Files
 .DS_Store
 Thumbs.db
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# Ignore
+!.gitkeep
