--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "lint": "ng lint --type-check",
+    "build": "ng-packagr -p ng-package.json && node ./cli/copy-files.js",
+    "release": "git push origin `git subtree split --prefix dist master`:releases --force",
+    "postinstall": "node ./cli/add-pug-loader.js"
   },
   "private": true,
   "dependencies": {
