Initial dist subtree commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,32 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "paths": {
-      "angular-core": [
-        "dist/angular-core/angular-core",
-        "dist/angular-core"
-      ]
-    },
-    "baseUrl": "./",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "importHelpers": true,
     "outDir": "./dist/out-tsc",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
-    "downlevelIteration": true,
-    "experimentalDecorators": true,
     "moduleResolution": "node",
-    "importHelpers": true,
-    "target": "es2017",
-    "module": "es2020",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "target": "es6",
+    "skipLibCheck": true,
+    "types": ["node"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "lib": [
-      "es2020",
-      "dom"
-    ]
+      "es2017",
+      "dom",
+      "dom.iterable"
+    ],
+    "module": "es2020",
+    "baseUrl": "./src"
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "allowSyntheticDefaultImports": true
   }
 }
