--- a/package.json
+++ b/package.json
@@ -1,39 +1,78 @@
 {
-  "name": "ngc-core",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "lint": "ng lint --type-check",
-    "build": "ng-packagr -p ng-package.json && node ./cli/copy-files.js",
-    "release": "git push origin `git subtree split --prefix dist master`:releases --force"
-  },
+  "name": "angular-core",
+  "version": "2.1.0",
+  "description": "Angular Core",
+  "license": "MIT",
+  "authors": "Cubable Team",
   "private": true,
+  "scripts": {
+    "ng": "node --max-old-space-size=4096 ./node_modules/@angular/cli/bin/ng",
+    "ng-packagr": "node --max-old-space-size=4096 ./node_modules/ng-packagr/cli/main.js",
+    "lint": "ng lint",
+    "version:patch": "npm --no-git-tag-version version patch",
+    "build": "npm i && ng-packagr -p ng-package.json --config ./src/lib/tsconfig.lib.json && node ./cli/copy-files.js",
+    "release": "branch=$(git rev-parse --abbrev-ref HEAD); git push origin `git subtree split --prefix dist $branch`:releases_$branch --force",
+    "postinstall": "node ./cli/add-pug-loader.js"
+  },
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
+    "@angular/animations": "13.3.8",
+    "@angular/cdk": "^13.3.7",
+    "@angular/common": "13.3.8",
+    "@angular/compiler": "13.3.8",
+    "@angular/core": "13.3.8",
+    "@angular/forms": "13.3.8",
+    "@angular/platform-browser": "13.3.8",
+    "@angular/platform-browser-dynamic": "13.3.8",
+    "@angular/router": "13.3.8",
+    "@angular/service-worker": "13.3.8",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "clone-deep": "^4.0.1",
+    "core-js": "^2.4.1",
+    "crypto-js": "3.1.9-1",
+    "hammerjs": "^2.0.8",
+    "intersection-observer": "^0.7.0",
+    "lodash": "4.17.15",
+    "moment": "^2.23.0",
+    "moment-timezone": "^0.5.14",
+    "ngx-cookie-service": "^13.2.1",
+    "rxjs": "^6.5.5",
+    "socket.io-client": "^4.0.1",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.2",
-    "@angular/cli": "~13.0.2",
-    "@angular/compiler-cli": "~13.0.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^13.0.0",
-    "typescript": "~4.4.3"
+    "@angular-devkit/build-angular": "~13.3.5",
+    "@angular-devkit/core": "^13.3.5",
+    "@angular-devkit/schematics": "^13.3.5",
+    "@angular-eslint/builder": "^13.2.1",
+    "@angular-eslint/eslint-plugin": "^13.2.1",
+    "@angular-eslint/eslint-plugin-template": "^13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "^13.2.1",
+    "@angular/cli": "13.3.5",
+    "@angular/compiler-cli": "^13.3.8",
+    "@angular/language-service": "13.3.8",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "codelyzer": "^6.0.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-deprecation": "^1.3.2",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
+    "husky": "^3.0.8",
+    "ng-packagr": "^13.3.1",
+    "pug": "^2.0.3",
+    "scss-bundle": "^3.0.1",
+    "ts-node": "~3.2.0",
+    "typescript": "4.6.4"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
