--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-core",
-  "version": "2.1.0",
+  "version": "2.2.1",
   "description": "Angular Core",
   "license": "MIT",
   "authors": "Cubable Team",
@@ -10,21 +10,22 @@
     "ng-packagr": "node --max-old-space-size=4096 ./node_modules/ng-packagr/cli/main.js",
     "lint": "ng lint",
     "version:patch": "npm --no-git-tag-version version patch",
-    "build": "npm i && ng-packagr -p ng-package.json --config ./src/lib/tsconfig.lib.json && node ./cli/copy-files.js",
+    "build": "npm i  --force && ng-packagr -p ng-package.json --config ./src/lib/tsconfig.lib.json && node ./cli/copy-files.js",
     "release": "branch=$(git rev-parse --abbrev-ref HEAD); git push origin `git subtree split --prefix dist $branch`:releases_$branch --force",
-    "tag": "branch=$(git rev-parse --abbrev-ref HEAD) && git tag -a $branch -m 'Tagging branch $branch' && git push origin --tags"
+    "tag": "branch=$(git rev-parse --abbrev-ref HEAD) && git tag -a $branch -m 'Tagging branch $branch' && git push origin --tags",
+"deploy:dist": "npm run build && git add . && git commit -m \"chore: build dist v$npm_package_version\" && git subtree push --prefix dist origin gh-pages"   
   },
   "dependencies": {
-    "@angular/animations": "13.3.8",
-    "@angular/cdk": "^13.3.7",
-    "@angular/common": "13.3.8",
-    "@angular/compiler": "13.3.8",
-    "@angular/core": "13.3.8",
-    "@angular/forms": "13.3.8",
-    "@angular/platform-browser": "13.3.8",
-    "@angular/platform-browser-dynamic": "13.3.8",
-    "@angular/router": "13.3.8",
-    "@angular/service-worker": "13.3.8",
+    "@angular/animations": "14.3.0",
+    "@angular/cdk": "14.2.7",
+    "@angular/common": "14.3.0",
+    "@angular/compiler": "14.3.0",
+    "@angular/core": "14.3.0",
+    "@angular/forms": "14.3.0",
+    "@angular/platform-browser": "14.3.0",
+    "@angular/platform-browser-dynamic": "14.3.0",
+    "@angular/router": "14.3.0",
+    "@angular/service-worker": "14.3.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "clone-deep": "^4.0.1",
@@ -42,17 +43,17 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.5",
-    "@angular-devkit/core": "^13.3.5",
-    "@angular-devkit/schematics": "^13.3.5",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular-devkit/core": "^14.2.13",
+    "@angular-devkit/schematics": "^14.2.13",
     "@angular-eslint/builder": "^13.2.1",
     "@angular-eslint/eslint-plugin": "^13.2.1",
     "@angular-eslint/eslint-plugin-template": "^13.2.1",
     "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "^13.2.1",
-    "@angular/cli": "13.3.5",
-    "@angular/compiler-cli": "^13.3.8",
-    "@angular/language-service": "13.3.8",
+    "@angular/cli": "14.2.13",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/language-service": "14.3.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "5.3.0",
@@ -64,7 +65,7 @@
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-prefer-arrow": "latest",
     "husky": "^3.0.8",
-    "ng-packagr": "^13.3.1",
+    "ng-packagr": "^14.2.2",
     "pug": "^2.0.3",
     "scss-bundle": "^3.0.1",
     "ts-node": "~3.2.0",
